// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationModal should be rendered correctly 1`] = `
<div
  className="container modalBlocker shadow-dark"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      aria-modal={true}
      className="uui-modal-window modal width-420 height-auto container"
      role="modal"
    >
      <div
        className="root size-36 background-white padding-24 vPadding-12 border-bottom-gray40 spacing-12 modalHeader container align-items-center"
      >
        <div
          className="root font-sans-semibold text-color-gray80 line-height-24 font-size-18 v-padding-12 container"
        >
          Test
        </div>
        <div
          className="flexSpacer"
        />
        <div
          className=""
          style={
            Object {
              "alignSelf": undefined,
              "flexBasis": "auto",
              "flexGrow": undefined,
              "flexShrink": 0,
              "minWidth": 0,
              "textAlign": undefined,
            }
          }
        >
          <button
            className="container uui-button-box uui-enabled -clickable root icon-color-gray60"
            href={null}
            onClick={[Function]}
            role="button"
            tabIndex={0}
            type="button"
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
              />
            </div>
          </button>
        </div>
      </div>
      <div
        className="root root theme-light"
        cx={
          Array [
            Array [
              "root",
              "theme-light",
            ],
            undefined,
          ]
        }
        style={
          Object {
            "display": "flex",
            "height": "100%",
            "overflow": "hidden",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "bottom": 0,
              "flex": "1 1 auto",
              "left": 0,
              "marginBottom": 0,
              "marginRight": 0,
              "overflow": "scroll",
              "position": "relative",
              "right": 0,
              "top": 0,
            }
          }
        />
        <div
          className="uui-track-horizontal"
          style={
            Object {
              "display": "none",
              "height": 6,
              "position": "absolute",
            }
          }
        >
          <div
            className="uui-thumb-horizontal"
          />
        </div>
        <div
          className="uui-track-vertical"
          style={
            Object {
              "display": "none",
              "position": "absolute",
              "width": 6,
            }
          }
        >
          <div
            className="uui-thumb-vertical"
          />
        </div>
      </div>
      <div
        className="root size-36 background-white padding-24 vPadding-24 spacing-12 modalFooter container align-items-center"
      >
        <div
          className="flexSpacer"
        />
        <button
          className="container uui-button-box uui-enabled -clickable button-color-gray50 root size-36 fill-white"
          href={null}
          onClick={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          <div
            className="uui-caption"
          >
            Discard
          </div>
        </button>
        <button
          className="container uui-button-box uui-enabled -clickable button-color-green root size-36 fill-solid"
          href={null}
          onClick={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          <div
            className="uui-caption"
          >
            Save
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
</div>
`;

exports[`ConfirmationModal should be rendered correctly 2`] = `
<div
  className="container modalBlocker shadow-dark"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      aria-modal={true}
      className="uui-modal-window modal width-420 height-auto container"
      role="modal"
    >
      <div
        className="root size-36 background-white padding-24 vPadding-12 border-bottom-gray40 spacing-12 modalHeader container align-items-center"
      >
        <div
          className="root font-sans-semibold text-color-gray80 line-height-24 font-size-18 v-padding-12 container"
        >
          Test
        </div>
        <div
          className="flexSpacer"
        />
        <div
          className=""
          style={
            Object {
              "alignSelf": undefined,
              "flexBasis": "auto",
              "flexGrow": undefined,
              "flexShrink": 0,
              "minWidth": 0,
              "textAlign": undefined,
            }
          }
        >
          <button
            className="container uui-button-box uui-enabled -clickable root icon-color-gray60"
            href={null}
            onClick={[Function]}
            role="button"
            tabIndex={0}
            type="button"
          >
            <div
              className="container uui-icon uui-enabled"
              style={Object {}}
            >
              <svg
                className=""
              />
            </div>
          </button>
        </div>
      </div>
      <div
        className="root root theme-light"
        cx={
          Array [
            Array [
              "root",
              "theme-light",
            ],
            undefined,
          ]
        }
        style={
          Object {
            "display": "flex",
            "height": "100%",
            "overflow": "hidden",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "WebkitOverflowScrolling": "touch",
              "bottom": 0,
              "flex": "1 1 auto",
              "left": 0,
              "marginBottom": 0,
              "marginRight": 0,
              "overflow": "scroll",
              "position": "relative",
              "right": 0,
              "top": 0,
            }
          }
        >
          <div
            className="root margin-24 container"
          >
            <div>
              Test content
            </div>
          </div>
        </div>
        <div
          className="uui-track-horizontal"
          style={
            Object {
              "display": "none",
              "height": 6,
              "position": "absolute",
            }
          }
        >
          <div
            className="uui-thumb-horizontal"
          />
        </div>
        <div
          className="uui-track-vertical"
          style={
            Object {
              "display": "none",
              "position": "absolute",
              "width": 6,
            }
          }
        >
          <div
            className="uui-thumb-vertical"
          />
        </div>
      </div>
      <div
        className="root size-36 background-white padding-24 vPadding-24 spacing-12 modalFooter container align-items-center"
      >
        <div
          className="flexSpacer"
        />
        <button
          className="container uui-button-box uui-enabled -clickable button-color-gray50 root size-36 fill-white"
          href={null}
          onClick={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          <div
            className="uui-caption"
          >
            Discard
          </div>
        </button>
        <button
          className="container uui-button-box uui-enabled -clickable button-color-green root size-36 fill-solid"
          href={null}
          onClick={[Function]}
          role="button"
          tabIndex={0}
          type="button"
        >
          <div
            className="uui-caption"
          >
            Save
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />
</div>
`;
